--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
 	background-color: #55474e;
 	@include univerzalni-display(flex, center, center);
-	padding: 1rem 3rem;
+	padding: 1rem 2rem;
 	height: 60vh;
 
 	&-container {
@@ -35,10 +35,12 @@
 			& form {
 				@include univerzalni-display(flex, center, center);
 				flex-direction: column;
-				width: clamp(170px, 20vw, 400px);
+				width: clamp(200px, 20vw, 400px);
 
 				& input,
 				& textarea {
+					width: 90%;
+					margin: 0 auto;
 					margin-bottom: 2rem;
 					background: none;
 					outline: none;
@@ -66,15 +68,17 @@
 		}
 	}
 	& .made-by-footer {
-		width: 25%;
+		width: 30%;
 		text-align: center;
+		@include univerzalni-display(flex, flex-start, center);
+		flex-direction: column;
 
-		& h2 {
-			font-size: clamp(1.3rem, 2vw, 2rem);
+		& h1 {
+			font-size: clamp(1.2rem, 3vw, 2.2rem);
+			margin-bottom: 1rem;
 		}
 
 		& .social-icons-footer {
-			margin-top: 3rem;
 			width: 100%;
 			@include univerzalni-display(flex, space-evenly, center);
 
