--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -112,8 +112,25 @@ body {
 }
 
 .footer-container .contact-footer form textarea {
-  line-height: 15px;
   height: 10rem;
+}
+
+.footer-container .contact-footer form [placeholder]::-webkit-input-placeholder {
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.footer-container .contact-footer form [placeholder]:focus::-webkit-input-placeholder {
+  color: transparent;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.footer-container .contact-footer form textarea::-webkit-input-placeholder {
+  width: 100%;
+  height: 100%;
+  line-height: 100%;
+  resize: vertical;
 }
 
 .footer-container .contact-footer form button {
