--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -50,9 +50,26 @@
 				}
 
 				& textarea {
-					line-height: 15px;
 					height: 10rem;
 				}
+
+				//placeholder postaviti dole
+				& [placeholder]::-webkit-input-placeholder {
+					transition: all 0.5s ease;
+				}
+				& [placeholder]:focus::-webkit-input-placeholder {
+					color: transparent;
+					transition: all 0.5s ease;
+				}
+				textarea::-webkit-input-placeholder {
+					width: 100%;
+					height: 100%;
+					line-height: 100%;
+					resize: vertical;
+				}
+
+				//dodat kod za postavljanje crvenog ruba ako nesto nije uneseno
+				//za botun
 
 				& button {
 					width: 70px;
