--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -1,8 +1,9 @@
 .footer {
-	background-color: #55474e;
-	@include univerzalni-display(flex, center, center);
-	padding: 1rem 2rem;
 	height: 60vh;
+	@include univerzalni-display(flex, center, center);
+
+	background-color: $primary-background-color;
+	padding: 1rem 2rem;
 
 	&-container {
 		width: 100%;
@@ -40,12 +41,15 @@
 				& input,
 				& textarea {
 					width: 90%;
+
 					margin: 0 auto;
 					margin-bottom: 2rem;
+
 					background: none;
 					outline: none;
 					border: none;
-					border-bottom: 1px solid #ffffffb8;
+					border-bottom: 1px solid $primary-text-color;
+
 					line-height: 30px;
 				}
 
@@ -53,7 +57,6 @@
 					height: 10rem;
 				}
 
-				//placeholder postaviti dole
 				& [placeholder]::-webkit-input-placeholder {
 					transition: all 0.5s ease;
 				}
@@ -61,38 +64,24 @@
 					color: transparent;
 					transition: all 0.5s ease;
 				}
-				textarea::-webkit-input-placeholder {
-					width: 100%;
-					height: 100%;
-					line-height: 100%;
-					resize: vertical;
-				}
-
-				//dodat kod za postavljanje crvenog ruba ako nesto nije uneseno
-				//za botun
 
 				& button {
-					width: 70px;
-					height: 30px;
-					border-radius: 10px;
-					border: none;
-					background: #968580;
+					@include button($button-color-1, 35%, 2.2rem);
 					margin: 0 auto;
-					color: #ffffffb8;
-					cursor: pointer;
+					font-size: clamp(0.8rem, 1vw, 1rem);
 				}
 			}
 		}
 	}
 	& .made-by-footer {
 		width: 30%;
-		text-align: center;
 		@include univerzalni-display(flex, flex-start, center);
 		flex-direction: column;
 
 		& h1 {
 			font-size: clamp(1.5rem, 2.5vw, 2.1rem);
 			margin-bottom: 2rem;
+			text-align: center;
 		}
 
 		& .social-icons-footer {
@@ -101,7 +90,6 @@
 
 			& a {
 				text-decoration: none;
-				color: black;
 				font-size: clamp(1.2rem, 2vw, 1.5rem);
 			}
 		}
