--- a/styles/sass/_responzive.scss
+++ b/styles/sass/_responzive.scss
@@ -1,40 +1,34 @@
 @include media-mobile {
-	.footer {
-		height: fit-content;
+	.footer-container {
+		flex-direction: column;
 
-		&-container {
-			flex-direction: column;
-			@include univerzalni-display(flex, space-evenly, center);
+		& .bookie-footer {
+			align-items: center;
+			margin-bottom: 5rem;
+		}
 
-			& .bookie-footer {
-				margin-bottom: 5rem;
-				margin-right: 0;
-				text-align: center;
+		& .contact-footer {
+			& h1 {
+				margin-bottom: 1.5rem;
 			}
 
-			& .contact-footer {
-				& h1 {
-					margin-bottom: 1.5rem;
+			& form {
+				width: clamp(170px, 60vw, 250px);
+
+				& input,
+				& textarea {
+					width: 100%;
 				}
-
-				& form {
-					width: clamp(170px, 60vw, 250px);
-
-					& input,
-					& textarea {
-						width: 100%;
-					}
-					& textarea {
-						height: 5rem;
-						margin-bottom: 1rem;
-					}
+				& textarea {
+					height: 5rem;
+					margin-bottom: 1rem;
 				}
 			}
+		}
 
-			& .made-by-footer {
-				margin-top: 5rem;
-				width: 100%;
-			}
+		& .made-by-footer {
+			margin-top: 5rem;
+			width: 100%;
 		}
 	}
 }
