--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -1,24 +1,21 @@
 .footer {
-	height: 60vh;
+	height: max-content;
+	padding: 3rem 0.5rem;
 	@include univerzalni-display(flex, center, center);
-
 	background-color: $primary-background-color;
-	padding: 1rem 2rem;
 
 	&-container {
 		width: 100%;
 		@include univerzalni-display(flex, space-evenly, center);
 
 		& .bookie-footer {
-			display: flex;
+			@include univerzalni-display(flex, space-evenly, flex-start);
 			flex-direction: column;
-			margin-right: 0.5rem;
 
 			& h1 {
-				margin-bottom: 1rem;
 				font-size: clamp(1.7rem, 3vw, 2.5rem);
 				cursor: pointer;
-				transition: all 0.2s ease;
+				transition: transform 0.2s ease;
 			}
 
 			& h1:active {
@@ -31,12 +28,11 @@
 		}
 
 		& .contact-footer {
-			height: 100%;
 			@include univerzalni-display(flex, center, center);
 			flex-direction: column;
 
 			& h1 {
-				font-size: clamp(1.5rem, 4vw, 2.5rem);
+				font-size: clamp(1.7rem, 3vw, 2.5rem);
 				margin-bottom: 3rem;
 			}
 
@@ -48,15 +44,12 @@
 				& input,
 				& textarea {
 					width: 90%;
-
 					margin: 0 auto;
 					margin-bottom: 2rem;
-
 					background: none;
 					outline: none;
 					border: none;
 					border-bottom: 1px solid $primary-text-color;
-
 					line-height: 30px;
 				}
 
@@ -65,18 +58,18 @@
 				}
 
 				& [placeholder]::-webkit-input-placeholder {
-					transition: all 0.5s ease;
+					transition: color 0.5s ease;
 				}
 				& [placeholder]:focus::-webkit-input-placeholder {
 					color: transparent;
-					transition: all 0.5s ease;
+					transition: color 0.5s ease;
 				}
 
 				& button {
 					@include button($button-color-1, 35%, 2.2rem);
 					margin: 0 auto;
 					font-size: clamp(0.8rem, 1vw, 1rem);
-					transition: all 0.3s ease;
+					transition: transform 0.3s ease;
 				}
 
 				& button:focus {
@@ -85,7 +78,7 @@
 				& button:hover {
 					box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
 					transform: translate3d(0, 1px, 0);
-					transition: all 0.3s ease;
+					transition: transform 0.3s ease;
 				}
 				& button:active {
 					transform: scale(0.9);
@@ -111,12 +104,12 @@
 			& a {
 				text-decoration: none;
 				font-size: clamp(1.2rem, 2vw, 1.5rem);
-				transition: all 0.3s ease;
+				transition: transform 0.3s ease;
 			}
 
 			& a:active {
 				transform: scale(0.875);
-				transition: all 0.2s ease;
+				transition: transform 0.2s ease;
 			}
 		}
 	}
