--- a/styles/sass/_config.scss
+++ b/styles/sass/_config.scss
@@ -1,5 +1,17 @@
+//google fonts
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap");
+
+//dvije pozadine
 $primary-background-color: #55474e;
+$secondary-background-color: #dfdad9;
+
+//koliko znam, svugdje imamo jednu boju za text
 $primary-text-color: #ffffffb8;
+
+//drugi tip puno češće se koristi nego drugi, a zadnji se samo jednom koristi
+$button-color-1: #968580;
+$button-color-2: #3a2e39;
+$button-color-3: #fef5f5;
 
 *,
 ::before,
@@ -7,11 +19,28 @@ $primary-text-color: #ffffffb8;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+
+	//ovdje je color da se primjeni i na placeholdere
 	color: $primary-text-color;
+
+	//ovdje sam stavila jer dok se nalazi u bodyju
+	//se ne primjenjuje iz nekog razloga na h1 i h2
+	font-weight: 500;
 }
 
 body {
-	font-family: "Times New Roman", Times, serif;
+	//iako sam vidila kako je u figmi stavljeno, opet drukčije izgleda font
+	//ne znam zašto, ali mi se i ovako sviđa
+	font-family: "Playfair Display SC", serif;
+	text-transform: lowercase;
+	font-variant: small-caps;
+	letter-spacing: 1px;
+}
+
+[placeholder] {
+	//font koji smo definirali za body, u placeholderima
+	//mi je ružan, pa sam stavila ovaj
+	font-family: monospace;
 }
 
 // mixin za display
@@ -21,6 +50,7 @@ body {
 	align-items: $align-items;
 }
 
+//mixin za responzivnost
 @mixin media-mobile {
 	@media screen and (max-width: 630px) {
 		@content;
@@ -37,4 +67,16 @@ body {
 	@media screen and (max-width: 1280px) {
 		@content;
 	}
+}
+
+//mixin za botune
+@mixin button($background, $width, $height) {
+	border: none;
+	border-radius: 10px;
+	cursor: pointer;
+
+	background: $background;
+	width: $width;
+	height: $height;
+	color: $primary-text-color;
 }
