--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap");
 *,
 ::before,
 ::after {
@@ -6,14 +7,25 @@
   margin: 0;
   padding: 0;
   color: #ffffffb8;
+  font-weight: 500;
 }
 
 body {
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Playfair Display SC", serif;
+  text-transform: lowercase;
+  font-variant: small-caps;
+  letter-spacing: 1px;
+}
+
+[placeholder] {
+  font-family: monospace;
 }
 
 .footer {
-  background-color: #55474e;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  padding: 3rem 0.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -23,8 +35,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1rem 2rem;
-  height: 60vh;
+  background-color: #55474e;
 }
 
 .footer-container {
@@ -44,16 +55,34 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-right: 0.5rem;
 }
 
 .footer-container .bookie-footer h1 {
-  margin-bottom: 1rem;
   font-size: clamp(1.7rem, 3vw, 2.5rem);
+  cursor: pointer;
+  -webkit-transition: -webkit-transform 0.2s ease;
+  transition: -webkit-transform 0.2s ease;
+  transition: transform 0.2s ease;
+  transition: transform 0.2s ease, -webkit-transform 0.2s ease;
+}
+
+.footer-container .bookie-footer h1:active {
+  -webkit-transform: scale(0.925);
+          transform: scale(0.925);
+  -webkit-transition: -webkit-transform 0.2s ease;
+  transition: -webkit-transform 0.2s ease;
+  transition: transform 0.2s ease;
+  transition: transform 0.2s ease, -webkit-transform 0.2s ease;
 }
 
 .footer-container .bookie-footer h2 {
@@ -61,7 +90,6 @@ body {
 }
 
 .footer-container .contact-footer {
-  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -78,7 +106,7 @@ body {
 }
 
 .footer-container .contact-footer h1 {
-  font-size: clamp(1.5rem, 4vw, 2.5rem);
+  font-size: clamp(1.7rem, 3vw, 2.5rem);
   margin-bottom: 3rem;
 }
 
@@ -116,37 +144,55 @@ body {
 }
 
 .footer-container .contact-footer form [placeholder]::-webkit-input-placeholder {
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+  -webkit-transition: color 0.5s ease;
+  transition: color 0.5s ease;
 }
 
 .footer-container .contact-footer form [placeholder]:focus::-webkit-input-placeholder {
   color: transparent;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-.footer-container .contact-footer form textarea::-webkit-input-placeholder {
-  width: 100%;
-  height: 100%;
-  line-height: 100%;
-  resize: vertical;
+  -webkit-transition: color 0.5s ease;
+  transition: color 0.5s ease;
 }
 
 .footer-container .contact-footer form button {
-  width: 70px;
-  height: 30px;
-  border-radius: 10px;
   border: none;
-  background: #968580;
-  margin: 0 auto;
-  color: #ffffffb8;
+  border-radius: 10px;
   cursor: pointer;
+  background: #968580;
+  width: 35%;
+  height: 2.2rem;
+  color: #ffffffb8;
+  margin: 0 auto;
+  font-size: clamp(0.8rem, 1vw, 1rem);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+.footer-container .contact-footer form button:focus {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+          box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+}
+
+.footer-container .contact-footer form button:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
+          box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
+  -webkit-transform: translate3d(0, 1px, 0);
+          transform: translate3d(0, 1px, 0);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+.footer-container .contact-footer form button:active {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
 }
 
 .footer .made-by-footer {
   width: 30%;
-  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -165,6 +211,7 @@ body {
 .footer .made-by-footer h1 {
   font-size: clamp(1.5rem, 2.5vw, 2.1rem);
   margin-bottom: 2rem;
+  text-align: center;
 }
 
 .footer .made-by-footer .social-icons-footer {
@@ -182,35 +229,34 @@ body {
 
 .footer .made-by-footer .social-icons-footer a {
   text-decoration: none;
-  color: black;
   font-size: clamp(1.2rem, 2vw, 1.5rem);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+.footer .made-by-footer .social-icons-footer a:active {
+  -webkit-transform: scale(0.875);
+          transform: scale(0.875);
+  -webkit-transition: -webkit-transform 0.2s ease;
+  transition: -webkit-transform 0.2s ease;
+  transition: transform 0.2s ease;
+  transition: transform 0.2s ease, -webkit-transform 0.2s ease;
 }
 
 @media screen and (max-width: 630px) {
-  .footer {
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-  }
   .footer-container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+  }
+  .footer-container .bookie-footer {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-  }
-  .footer-container .bookie-footer {
     margin-bottom: 5rem;
-    margin-right: 0;
-    text-align: center;
   }
   .footer-container .contact-footer h1 {
     margin-bottom: 1.5rem;
