--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -123,3 +123,62 @@
     }
   }
 }
+
+.booklist-wrapper {
+  background: #968580;
+  width: 100%;
+  display: grid;
+  gap: 5em;
+  grid-template-columns: repeat(1, 1fr);
+  color: white;
+  padding: 5em 0;
+  .booklist-heading {
+    font-size: clamp(2.5em, 4vw, 5.5em);
+    text-align: center;
+    color: white;
+  }
+}
+.booklist {
+  width: clamp(80vw, 40em, 95vw);
+  margin: 0 auto;
+  display: grid;
+  gap: 2em;
+  place-items: start center;
+  grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
+
+  &__card {
+    // border: 0.12em solid red;
+    box-shadow: 0.1em 0.1em 0.25em rgba(0, 0, 0, 0.35);
+    border-radius: 0.3em;
+    width: 100%;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    gap: 1em;
+    text-align: center;
+    img {
+      height: 15em;
+      max-width: 100%;
+      filter: drop-shadow(0.1em 0.1em 0.2em #000);
+    }
+
+    a {
+      text-transform: lowercase;
+      text-decoration: none;
+      font-size: clamp(1em, 1.5vw, 2em);
+      // border: 0.12em solid red;
+      cursor: pointer;
+      padding: 0.5em 0.75em;
+      background: #3a2e39;
+      color: white;
+      border-radius: 0.25em;
+      box-shadow: 0.1em 0.1em 0.1em #3a2e39;
+      transition: all 0.25s ease-in-out;
+
+      &:hover {
+        box-shadow: none;
+      }
+    }
+  }
+}
