promjena boje sporedne pozadine

--- a/styles/sass/_config.scss
+++ b/styles/sass/_config.scss
@@ -3,7 +3,7 @@
 
 //dvije pozadine
 $primary-background-color: #55474e;
-$secondary-background-color: #dfdad9;
+$secondary-background-color: #968580;
 
 //koliko znam, svugdje imamo jednu boju za text
 $primary-text-color: #ffffffb8;
