--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -324,6 +324,137 @@ body {
           transform: scale(0.9);
 }
 
+.newsletter {
+  height: 50vh;
+  padding: 2rem 0.5rem;
+  background-color: #968580;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.newsletter-container {
+  height: 80%;
+  width: 100%;
+  margin: auto 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.newsletter-container h1 {
+  font-size: clamp(1.5rem, 5vw, 3rem);
+  text-align: center;
+}
+
+.newsletter-container .sign-in {
+  width: 100%;
+  height: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.newsletter-container .sign-in input {
+  width: clamp(100px, 30%, 350px);
+  outline: none;
+  background: none;
+  border: none;
+  border-bottom: 1px solid #ffffffb8;
+  color: #ffffffb8;
+  line-height: 30px;
+  margin-right: 2rem;
+}
+
+.newsletter-container .sign-in input::-webkit-input-placeholder {
+  color: #ffffffb8;
+  font-size: clamp(0.7rem, 3vw, 0.9rem);
+}
+
+.newsletter-container .sign-in input:-ms-input-placeholder {
+  color: #ffffffb8;
+  font-size: clamp(0.7rem, 3vw, 0.9rem);
+}
+
+.newsletter-container .sign-in input::-ms-input-placeholder {
+  color: #ffffffb8;
+  font-size: clamp(0.7rem, 3vw, 0.9rem);
+}
+
+.newsletter-container .sign-in input::placeholder {
+  color: #ffffffb8;
+  font-size: clamp(0.7rem, 3vw, 0.9rem);
+}
+
+.newsletter-container .sign-in [placeholder]::-webkit-input-placeholder {
+  -webkit-transition: color 0.5s ease;
+  transition: color 0.5s ease;
+}
+
+.newsletter-container .sign-in [placeholder]:focus::-webkit-input-placeholder {
+  color: transparent;
+  -webkit-transition: color 0.5s ease;
+  transition: color 0.5s ease;
+}
+
+.newsletter-container .sign-in button {
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  background: #3a2e39;
+  width: clamp(3.5rem, 30%, 7rem);
+  height: 2.3rem;
+  color: #ffffffb8;
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+  font-size: clamp(0.6rem, 3vw, 0.9rem);
+}
+
+.newsletter-container .sign-in button:focus {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+          box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+}
+
+.newsletter-container .sign-in button:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
+          box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
+  -webkit-transform: translate3d(0, 1px, 0);
+          transform: translate3d(0, 1px, 0);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+.newsletter-container .sign-in button:active {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+
 @media screen and (max-width: 630px) {
   .footer-container {
     -webkit-box-orient: vertical;
@@ -354,5 +485,20 @@ body {
   .footer-container .made-by-footer {
     margin-top: 5rem;
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .newsletter-container .sign-in {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 75%;
+  }
+  .newsletter-container .sign-in input {
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 2rem;
   }
 }
