--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,141 +1,3 @@
 @import "config";
-@import "header";
-@import "footer";
+@import "home";
 @import "responzive";
-
-
-
-
-.booklist-wrapper {
-  background: #968580;
-  width: 100%;
-  display: grid;
-  gap: 5em;
-  grid-template-columns: repeat(1, 1fr);
-  color: white;
-  padding: 5em 0;
-  .booklist-heading {
-    font-size: clamp(2.5em, 4vw, 5.5em);
-    text-align: center;
-    color: white;
-  }
-}
-.booklist {
-  width: clamp(80vw, 40em, 95vw);
-  margin: 0 auto;
-  display: grid;
-  gap: 2em;
-  place-items: start center;
-  grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
-
-  &__card {
-    // border: 0.12em solid red;
-    box-shadow: 0.1em 0.1em 0.25em rgba(0, 0, 0, 0.35);
-    border-radius: 0.3em;
-    width: 100%;
-    padding: 1em;
-    display: flex;
-    flex-direction: column;
-    place-items: center;
-    gap: 1em;
-    text-align: center;
-    img {
-      height: 15em;
-      max-width: 100%;
-      filter: drop-shadow(0.1em 0.1em 0.2em #000);
-    }
-
-    a {
-      text-transform: lowercase;
-      text-decoration: none;
-      font-size: clamp(1em, 1.5vw, 2em);
-      // border: 0.12em solid red;
-      cursor: pointer;
-      padding: 0.5em 0.75em;
-      background: #3a2e39;
-      color: white;
-      border-radius: 0.25em;
-      box-shadow: 0.1em 0.1em 0.1em #3a2e39;
-      transition: all 0.25s ease-in-out;
-
-      &:hover {
-        box-shadow: none;
-      }
-    }
-  }
-}
-.catalog-main {
-  background: #968580;
-}
-
-.search-form {
-  // border: 1px solid red;
-  width: clamp(80vw, 40em, 95vw);
-  margin: 0 auto;
-  padding: 2em 0;
-
-  form {
-    padding: 0.5em;
-    display: flex;
-    place-items: center;
-  }
-
-  input {
-    font-size: clamp(1em, 1.5vw, 2em);
-    outline: none;
-    background: none;
-    border: none;
-    box-shadow: 0 0.25em 0.1em -0.1em white;
-    padding: 0.5em 0.75em;
-    color: white;
-    transition: all 0.25s ease-in-out;
-
-    &::placeholder {
-      opacity: 1;
-    }
-
-    &:focus {
-      box-shadow: 0 0.25em 0.1em -0.1em orange;
-    }
-  }
-
-  .search-icon {
-    outline: none;
-    border: none;
-    background: url("../../assets/search-icon.png") no-repeat center
-      center/cover;
-    padding: 0.5em 0.75em;
-    cursor: pointer;
-    width: 3em;
-    height: 3em;
-  }
-}
-
-.search-controls {
-  // border: 1px solid blue;
-  width: clamp(80vw, 40em, 95vw);
-  margin: 0 auto;
-  display: flex;
-  gap: 1.5em;
-  place-items: center;
-  justify-content: flex-end;
-  padding: 1em;
-  &__left,
-  &__right {
-    outline: none;
-    font-size: clamp(0.75em, 1.25vw, 2em);
-    padding: 0.5em 0.75em;
-    cursor: pointer;
-    border: none;
-    width: 3em;
-    height: 3em;
-  }
-
-  &__left {
-    background: url("../../assets/left-arrow.png") no-repeat center center/cover;
-  }
-  &__right {
-    background: url("../../assets/right-arrow.png") no-repeat center
-      center/cover;
-  }
-}
