dodan scss za show-catalog

--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -264,7 +264,7 @@
 
 //***SHOW CATALOG***//
 
-.newsletter {
+.show-catalog {
 	height: 50vh;
 	padding: 2rem 0.5rem;
 	@include univerzalni-display(flex, center, center);
