--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -342,7 +342,7 @@ body {
   background: url("../../assets/right-arrow.png") no-repeat center center/cover;
 }
 
-.newsletter {
+.show-catalog {
   height: 50vh;
   padding: 2rem 0.5rem;
   display: -webkit-box;
@@ -359,7 +359,7 @@ body {
   background-size: cover;
 }
 
-.newsletter-container {
+.show-catalog-container {
   height: 80%;
   width: 100%;
   margin: auto 0;
@@ -378,12 +378,12 @@ body {
           flex-direction: column;
 }
 
-.newsletter-container h1 {
+.show-catalog-container h1 {
   font-size: clamp(1.5rem, 5vw, 3.5rem);
   text-align: center;
 }
 
-.newsletter-container button {
+.show-catalog-container button {
   border: none;
   border-radius: 10px;
   cursor: pointer;
@@ -399,12 +399,12 @@ body {
   font-size: clamp(0.8rem, 3vw, 1rem);
 }
 
-.newsletter-container button:focus {
+.show-catalog-container button:focus {
   -webkit-box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
           box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
 }
 
-.newsletter-container button:hover {
+.show-catalog-container button:hover {
   -webkit-box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
           box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
   -webkit-transform: translate3d(0, 1px, 0);
@@ -415,7 +415,7 @@ body {
   transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 
-.newsletter-container button:active {
+.show-catalog-container button:active {
   -webkit-transform: scale(0.9);
           transform: scale(0.9);
 }
