scss za blog uključen u glavni scss, scss u css

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,6 +1,7 @@
 @import "config";
 @import "home";
 @import "about-us";
+@import "blog";
 @import "login";
 @import "register";
 @import "responzive";
