--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -904,6 +904,310 @@ body {
   margin-bottom: 4rem;
 }
 
+.blog {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  width: 100%;
+  padding: 2rem;
+  background-color: #968580;
+}
+
+.blog-container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.blog-container h1 {
+  font-size: 6rem;
+  margin-bottom: 3rem;
+}
+
+.blog-container .search-container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 2rem;
+}
+
+.blog-container .search-container input {
+  width: 300px;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #ffffffb8;
+  background: none;
+  line-height: 30px;
+}
+
+.blog-container .filter-container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0 3rem;
+  margin-bottom: 4rem;
+}
+
+.blog-container .filter-container h2 {
+  font-size: 3rem;
+  margin-bottom: 3rem;
+}
+
+.blog-container .filter-container .btn-container {
+  width: 100%;
+}
+
+.blog-container .filter-container .btn-container button {
+  margin-right: 0.3rem;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  background: #55474e;
+  width: 100px;
+  height: 40px;
+  color: #ffffffb8;
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+.blog-container .filter-container .btn-container button:focus {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+          box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+}
+
+.blog-container .filter-container .btn-container button:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
+          box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
+  -webkit-transform: translate3d(0, 1px, 0);
+          transform: translate3d(0, 1px, 0);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+.blog-container .filter-container .btn-container button:active {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+
+.desktop-navigation {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1.5em 0.5em;
+  width: clamp(80vw, 40em, 95vw);
+  margin: 0 auto;
+  color: white;
+  font-size: clamp(0.85em, 1.5vw, 1.1em);
+  font-family: "Playfair Display", serif;
+}
+
+.desktop-navigation__banner {
+  font-size: clamp(1.25em, 2vw, 2.3em);
+  text-shadow: 0 0 0.1em black;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.desktop-navigation__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1em;
+  text-shadow: 0 0 0.1em black;
+}
+
+.desktop-navigation__items a {
+  text-transform: lowercase;
+  position: relative;
+  cursor: pointer;
+}
+
+.desktop-navigation__items a::after {
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 0.15em;
+  bottom: -0.25em;
+  left: 0;
+  background: white;
+  -webkit-transition: width 0.5s ease;
+  transition: width 0.5s ease;
+}
+
+.desktop-navigation__items a:hover::after {
+  width: 100%;
+}
+
+.posts-container {
+  width: 100%;
+}
+
+.post-container {
+  width: 70%;
+  margin: 0 auto;
+  padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 3rem;
+  border-bottom: 1px solid #55474e;
+}
+
+.post-container button {
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  background: #55474e;
+  width: 100px;
+  height: 40px;
+  color: #ffffffb8;
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+  margin: 1rem 0;
+}
+
+.post-container button:focus {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+          box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+}
+
+.post-container button:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
+          box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
+  -webkit-transform: translate3d(0, 1px, 0);
+          transform: translate3d(0, 1px, 0);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+.post-container button:active {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+
+.post-container img {
+  width: 300px;
+  height: 300px;
+}
+
+.posters {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  padding: 2rem;
+}
+
+.posters button {
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  background: #55474e;
+  width: 100px;
+  height: 40px;
+  color: #ffffffb8;
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+.posters button:focus {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+          box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+}
+
+.posters button:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
+          box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
+  -webkit-transform: translate3d(0, 1px, 0);
+          transform: translate3d(0, 1px, 0);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+.posters button:active {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+
+.posters .card {
+  width: 60%;
+  margin: 0 auto;
+  padding: 0.5rem;
+  background-color: #968580;
+  -webkit-box-shadow: 10px 10px 10px 2px #000;
+          box-shadow: 10px 10px 10px 2px #000;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.posters .card img {
+  width: 300px;
+  height: 400px;
+}
+
 .login {
   height: -webkit-max-content;
   height: -moz-max-content;
