--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 *,
 ::before,
@@ -12,10 +12,7 @@
 }
 
 body {
-  font-family: "Playfair Display SC", serif;
-  text-transform: lowercase;
-  font-variant: small-caps;
-  letter-spacing: 1px;
+  font-family: "Playfair Display", serif;
 }
 
 [placeholder] {
@@ -27,6 +24,7 @@ body {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 @-webkit-keyframes upndown {
@@ -57,6 +55,7 @@ body {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.35)), to(rgba(0, 0, 0, 0.35))), url("../../public/hero.jpg") no-repeat center center/cover;
   background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url("../../public/hero.jpg") no-repeat center center/cover;
   position: relative;
+  z-index: 1;
 }
 
 .header__scroll-down {
@@ -120,8 +119,18 @@ body {
   font-size: clamp(1em, 1.7vw, 3em);
 }
 
-.desktop-navigation {
-  width: 100%;
+nav {
+  min-height: 5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.navbar-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -132,46 +141,140 @@ body {
   padding: 1.5em 0.5em;
   width: clamp(80vw, 40em, 95vw);
   margin: 0 auto;
-  color: white;
   font-size: clamp(0.85em, 1.5vw, 1.1em);
   font-family: "Playfair Display", serif;
 }
 
-.desktop-navigation__banner {
+@media (max-width: 768px) {
+  .navbar-wrapper {
+    position: fixed;
+    top: 0;
+    z-index: 999;
+  }
+}
+
+.navbar-wrapper .navbar-banner {
   font-size: clamp(1.25em, 2vw, 2.3em);
   text-shadow: 0 0 0.1em black;
   text-transform: uppercase;
   cursor: pointer;
+  text-decoration: none;
+  color: #ffffffd3;
 }
 
-.desktop-navigation__items {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.navbar-wrapper .desktop-navigation {
+  display: none;
   gap: 1em;
   text-shadow: 0 0 0.1em black;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
-.desktop-navigation__items a {
+@media (min-width: 768px) {
+  .navbar-wrapper .desktop-navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.navbar-wrapper .desktop-navigation a {
   text-transform: lowercase;
   position: relative;
   cursor: pointer;
+  color: #ffffffd3;
+  text-decoration: none;
 }
 
-.desktop-navigation__items a::after {
+.navbar-wrapper .desktop-navigation a::after {
   content: "";
   position: absolute;
+  background: #ffffffd3 !important;
   width: 0%;
   height: 0.15em;
   bottom: -0.25em;
   left: 0;
-  background: white;
   -webkit-transition: width 0.5s ease;
   transition: width 0.5s ease;
 }
 
-.desktop-navigation__items a:hover::after {
+.navbar-wrapper .desktop-navigation a:hover::after {
   width: 100%;
+}
+
+.burger {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.25em;
+  z-index: 3;
+}
+
+@media (min-width: 768px) {
+  .burger {
+    display: none;
+  }
+}
+
+.burger .bar {
+  width: 2.5em;
+  height: 0.25em;
+  background: #ffffffd3;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+.mobile-navigation {
+  top: 0;
+  left: 0;
+  position: fixed;
+  background-color: #55474e;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  place-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-transform: translateX(-100vw);
+          transform: translateX(-100vw);
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mobile-navigation a {
+  text-decoration: none;
+}
+
+.open-mobile {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.open-burger :nth-child(1) {
+  -webkit-transform: rotate(40deg) translate(0.1em, 0.5em);
+          transform: rotate(40deg) translate(0.1em, 0.5em);
+}
+
+.open-burger :nth-child(2) {
+  opacity: 0;
+}
+
+.open-burger :nth-child(3) {
+  -webkit-transform: rotate(-40deg) translate(0.1em, -0.7em);
+          transform: rotate(-40deg) translate(0.1em, -0.7em);
 }
 
 .booklist-wrapper {
@@ -179,6 +282,7 @@ body {
   width: 100%;
   display: -ms-grid;
   display: grid;
+  place-items: start center;
   gap: 5em;
   -ms-grid-columns: (1fr)[1];
       grid-template-columns: repeat(1, 1fr);
@@ -208,6 +312,7 @@ body {
           box-shadow: 0.1em 0.1em 0.25em rgba(0, 0, 0, 0.35);
   border-radius: 0.3em;
   width: 100%;
+  min-height: calc(30em + 3vh);
   padding: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1583,3 +1688,4 @@ body {
     padding: 0;
   }
 }
+/*# sourceMappingURL=styles.css.map */
