--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -3,394 +3,482 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 @keyframes upndown {
-	0% {
-		transform: translateY(0%);
-	}
+  0% {
+    transform: translateY(0%);
+  }
 
-	100% {
-		transform: translateY(50%);
-	}
+  100% {
+    transform: translateY(50%);
+  }
 }
 
 .header {
-	width: 100%;
-	min-height: calc(100vh + 5em);
-	background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
-		url("../../public/hero.jpg") no-repeat center center/cover;
-	position: relative;
+  width: 100%;
+  min-height: calc(100vh + 5em);
+  background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
+    url("../../public/hero.jpg") no-repeat center center/cover;
+  position: relative;
+  z-index: 1;
 
-	&__scroll-down {
-		width: 2em;
-		height: 3em;
-		border: 0.15em solid rgba(225, 225, 225, 0.65);
-		position: relative;
-		border-radius: 0.5em;
-		top: 35em;
-		left: 50%;
-		&::after {
-			position: absolute;
-			bottom: 10%;
-			left: 35%;
-			// background: white;
-			background: transparent;
-			border: 0.1em solid white;
-			width: 0.5em;
-			height: 0.5em;
-			content: "";
-			border-radius: 0.5em;
-			animation: upndown 0.5s linear infinite alternate;
-		}
-	}
+  &__scroll-down {
+    width: 2em;
+    height: 3em;
+    border: 0.15em solid rgba(225, 225, 225, 0.65);
+    position: relative;
+    border-radius: 0.5em;
+    top: 35em;
+    left: 50%;
+    &::after {
+      position: absolute;
+      bottom: 10%;
+      left: 35%;
+      // background: white;
+      background: transparent;
+      border: 0.1em solid white;
+      width: 0.5em;
+      height: 0.5em;
+      content: "";
+      border-radius: 0.5em;
+      animation: upndown 0.5s linear infinite alternate;
+    }
+  }
 
-	&__slogan {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		display: flex;
-		flex-direction: column;
-		place-items: center;
-		gap: 2em;
-		&__text {
-			color: white;
-			text-transform: uppercase;
-			font-size: clamp(2.5em, 8vw, 7.5em);
-			// white-space: nowrap;
-			font-family: "Playfair Display", serif;
-			font-weight: 400;
-			text-shadow: 0 0 0.1em black;
-		}
-		&__button {
-			outline: none;
-			font-size: inherit;
-			padding: 0.3em 1.5em;
-			background: #eadedb;
-			border-radius: 0.5em;
-			border: none;
-			color: rgba(0, 0, 0, 0.794);
-			font-size: clamp(1em, 1.7vw, 3em);
-		}
-	}
+  &__slogan {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    gap: 2em;
+    &__text {
+      color: white;
+      text-transform: uppercase;
+      font-size: clamp(2.5em, 8vw, 7.5em);
+      // white-space: nowrap;
+      font-family: "Playfair Display", serif;
+      font-weight: 400;
+      text-shadow: 0 0 0.1em black;
+    }
+    &__button {
+      outline: none;
+      font-size: inherit;
+      padding: 0.3em 1.5em;
+      background: #eadedb;
+      border-radius: 0.5em;
+      border: none;
+      color: rgba(0, 0, 0, 0.794);
+      font-size: clamp(1em, 1.7vw, 3em);
+    }
+  }
 }
-.desktop-navigation {
-	width: 100%;
-	// border: 1px solid red;
-	display: flex;
-	place-items: center;
-	justify-content: space-between;
-	padding: 1.5em 0.5em;
-	width: clamp(80vw, 40em, 95vw);
-	margin: 0 auto;
-	color: white;
-	font-size: clamp(0.85em, 1.5vw, 1.1em);
-	font-family: "Playfair Display", serif;
-	&__banner {
-		font-size: clamp(1.25em, 2vw, 2.3em);
-		text-shadow: 0 0 0.1em black;
-		text-transform: uppercase;
-		cursor: pointer;
-	}
 
-	&__items {
-		display: flex;
-		gap: 1em;
-		text-shadow: 0 0 0.1em black;
-		a {
-			text-transform: lowercase;
-			position: relative;
-			cursor: pointer;
+// nav {
+//   width: 100%;
+//   @media (max-width: 768px) {
+//     position: fixed;
+//   }
+// }
 
-			&::after {
-				content: "";
-				position: absolute;
-				width: 0%;
-				height: 0.15em;
-				bottom: -0.25em;
-				left: 0;
-				background: white;
-				transition: width 0.5s ease;
-			}
+nav {
+  min-height: 5em;
+  display: flex;
+  place-items: center;
+  justify-content: center;
+}
 
-			&:hover {
-				&::after {
-					width: 100%;
-				}
-			}
-		}
-	}
+.navbar-wrapper {
+  // border: 1px solid red;
+  display: flex;
+  place-items: center;
+  justify-content: space-between;
+  padding: 1.5em 0.5em;
+  width: clamp(80vw, 40em, 95vw);
+  margin: 0 auto;
+  font-size: clamp(0.85em, 1.5vw, 1.1em);
+  font-family: "Playfair Display", serif;
+
+  @media (max-width: 768px) {
+    position: fixed;
+    top: 0;
+    z-index: 999;
+  }
+
+  .navbar-banner {
+    font-size: clamp(1.25em, 2vw, 2.3em);
+    text-shadow: 0 0 0.1em black;
+    text-transform: uppercase;
+    cursor: pointer;
+    text-decoration: none;
+    color: $navigation-text-color;
+  }
+
+  .desktop-navigation {
+    display: none;
+
+    @media (min-width: 768px) {
+      display: flex;
+    }
+    gap: 1em;
+    text-shadow: 0 0 0.1em black;
+    justify-content: flex-end;
+    a {
+      text-transform: lowercase;
+      position: relative;
+      cursor: pointer;
+      color: $navigation-text-color;
+      text-decoration: none;
+      &::after {
+        content: "";
+        position: absolute;
+        background: $navigation-text-color !important;
+        width: 0%;
+        height: 0.15em;
+        bottom: -0.25em;
+        left: 0;
+        transition: width 0.5s ease;
+      }
+
+      &:hover {
+        &::after {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+.burger {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+  z-index: 3;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+
+  .bar {
+    width: 2.5em;
+    height: 0.25em;
+    background: $navigation-text-color;
+    transition: all 0.25s ease-in-out;
+  }
+}
+
+.mobile-navigation {
+  top: 0;
+  left: 0;
+  position: fixed;
+  background-color: $primary-background-color;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  place-items: center;
+  justify-content: space-evenly;
+  //   display: none;
+  transform: translateX(-100vw);
+  transition: all 0.25s ease-in-out;
+  display: flex;
+  a {
+    text-decoration: none;
+  }
+}
+
+.open-mobile {
+  transform: translateX(0);
+}
+
+.open-burger {
+  :nth-child(1) {
+    transform: rotate(40deg) translate(0.1em, 0.5em);
+  }
+  :nth-child(2) {
+    opacity: 0;
+  }
+
+  :nth-child(3) {
+    transform: rotate(-40deg) translate(0.1em, -0.7em);
+  }
 }
 
 // ***FAN FAVOURITIES ****//
 
 .booklist-wrapper {
-	background: #968580;
-	width: 100%;
-	display: grid;
-	gap: 5em;
-	grid-template-columns: repeat(1, 1fr);
-	color: white;
-	padding: 5em 0;
-	.booklist-heading {
-		font-size: clamp(2.5em, 4vw, 5.5em);
-		text-align: center;
-		color: white;
-	}
+  background: #968580;
+  width: 100%;
+  display: grid;
+  place-items: start center;
+  gap: 5em;
+  grid-template-columns: repeat(1, 1fr);
+
+  color: white;
+  padding: 5em 0;
+  .booklist-heading {
+    font-size: clamp(2.5em, 4vw, 5.5em);
+    text-align: center;
+    color: white;
+  }
 }
 .booklist {
-	width: clamp(80vw, 40em, 95vw);
-	margin: 0 auto;
-	display: grid;
-	gap: 2em;
-	place-items: start center;
-	grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
+  width: clamp(80vw, 40em, 95vw);
+  margin: 0 auto;
+  display: grid;
+  gap: 2em;
+  place-items: start center;
+  grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
 
-	&__card {
-		// border: 0.12em solid red;
-		box-shadow: 0.1em 0.1em 0.25em rgba(0, 0, 0, 0.35);
-		border-radius: 0.3em;
-		width: 100%;
-		padding: 1em;
-		display: flex;
-		flex-direction: column;
-		place-items: center;
-		gap: 1em;
-		text-align: center;
-		img {
-			height: 15em;
-			max-width: 100%;
-			filter: drop-shadow(0.1em 0.1em 0.2em #000);
-		}
+  &__card {
+    // border: 0.12em solid red;
+    box-shadow: 0.1em 0.1em 0.25em rgba(0, 0, 0, 0.35);
+    border-radius: 0.3em;
+    width: 100%;
+    min-height: calc(30em + 3vh);
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    gap: 1em;
+    text-align: center;
+    img {
+      height: 15em;
+      max-width: 100%;
+      filter: drop-shadow(0.1em 0.1em 0.2em #000);
+    }
 
-		a {
-			text-transform: lowercase;
-			text-decoration: none;
-			font-size: clamp(1em, 1.5vw, 2em);
-			// border: 0.12em solid red;
-			cursor: pointer;
-			padding: 0.5em 0.75em;
-			background: #3a2e39;
-			color: white;
-			border-radius: 0.25em;
-			box-shadow: 0.1em 0.1em 0.1em #3a2e39;
-			transition: all 0.25s ease-in-out;
+    a {
+      text-transform: lowercase;
+      text-decoration: none;
+      font-size: clamp(1em, 1.5vw, 2em);
+      // border: 0.12em solid red;
+      cursor: pointer;
+      padding: 0.5em 0.75em;
+      background: #3a2e39;
+      color: white;
+      border-radius: 0.25em;
+      box-shadow: 0.1em 0.1em 0.1em #3a2e39;
+      transition: all 0.25s ease-in-out;
 
-			&:hover {
-				box-shadow: none;
-			}
-		}
-	}
+      &:hover {
+        box-shadow: none;
+      }
+    }
+  }
 }
 
 //***SHOW CATALOG***//
 
 .show-catalog {
-	height: 50vh;
-	padding: 2rem 0.5rem;
-	@include univerzalni-display(flex, center, center);
-	background: linear-gradient(
-			to right,
-			rgba(0, 0, 0, 0.9),
-			rgba(0, 0, 0, 0.5),
-			rgba(0, 0, 0, 0.9)
-		),
-		url(../../assets/show-catalog-image.jpg) center;
-	background-size: cover;
+  height: 50vh;
+  padding: 2rem 0.5rem;
+  @include univerzalni-display(flex, center, center);
+  background: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.9),
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.9)
+    ),
+    url(../../assets/show-catalog-image.jpg) center;
+  background-size: cover;
 
-	&-container {
-		height: 80%;
-		width: 100%;
-		margin: auto 0;
-		@include univerzalni-display(flex, space-evenly, center);
-		flex-direction: column;
+  &-container {
+    height: 80%;
+    width: 100%;
+    margin: auto 0;
+    @include univerzalni-display(flex, space-evenly, center);
+    flex-direction: column;
 
-		& h1 {
-			font-size: clamp(1.5rem, 5vw, 3.5rem);
-			text-align: center;
-		}
+    & h1 {
+      font-size: clamp(1.5rem, 5vw, 3.5rem);
+      text-align: center;
+    }
 
-		& button {
-			@include button($button-color-3, clamp(7rem, 30%, 12rem), 3rem);
-			color: $secondary-text-color;
-			font-size: clamp(0.8rem, 3vw, 1rem);
-		}
-	}
+    & button {
+      @include button($button-color-3, clamp(7rem, 30%, 12rem), 3rem);
+      color: $secondary-text-color;
+      font-size: clamp(0.8rem, 3vw, 1rem);
+    }
+  }
 }
 
 //*** NEWSLETTER ***//
 .newsletter {
-	height: 50vh;
-	padding: 2rem 0.5rem;
-	background-color: $secondary-background-color;
-	@include univerzalni-display(flex, start, start);
+  height: 50vh;
+  padding: 2rem 0.5rem;
+  background-color: $secondary-background-color;
+  @include univerzalni-display(flex, start, start);
 
-	&-container {
-		height: 80%;
-		width: 100%;
-		margin: auto 0;
-		@include univerzalni-display(flex, space-between, center);
-		flex-direction: column;
+  &-container {
+    height: 80%;
+    width: 100%;
+    margin: auto 0;
+    @include univerzalni-display(flex, space-between, center);
+    flex-direction: column;
 
-		& h1 {
-			font-size: clamp(1.5rem, 5vw, 3rem);
-			text-align: center;
-		}
+    & h1 {
+      font-size: clamp(1.5rem, 5vw, 3rem);
+      text-align: center;
+    }
 
-		& .sign-in {
-			width: 100%;
-			height: 60%;
-			@include univerzalni-display(flex, center, center);
+    & .sign-in {
+      width: 100%;
+      height: 60%;
+      @include univerzalni-display(flex, center, center);
 
-			& input {
-				width: clamp(100px, 30%, 350px);
-				outline: none;
-				background: none;
-				border: none;
-				border-bottom: 1px solid $primary-text-color;
-				color: $primary-text-color;
-				line-height: 30px;
-				margin-right: 2rem;
+      & input {
+        width: clamp(100px, 30%, 350px);
+        outline: none;
+        background: none;
+        border: none;
+        border-bottom: 1px solid $primary-text-color;
+        color: $primary-text-color;
+        line-height: 30px;
+        margin-right: 2rem;
 
-				&::placeholder {
-					color: $primary-text-color;
-					font-size: clamp(0.7rem, 3vw, 0.9rem);
-				}
-			}
-			& [placeholder]::-webkit-input-placeholder {
-				transition: color 0.5s ease;
-			}
-			& [placeholder]:focus::-webkit-input-placeholder {
-				color: transparent;
-				transition: color 0.5s ease;
-			}
-			& button {
-				@include button($button-color-2, clamp(3.5rem, 30%, 7rem), 2.3rem);
-				font-size: clamp(0.6rem, 3vw, 0.9rem);
-			}
-		}
-	}
+        &::placeholder {
+          color: $primary-text-color;
+          font-size: clamp(0.7rem, 3vw, 0.9rem);
+        }
+      }
+      & [placeholder]::-webkit-input-placeholder {
+        transition: color 0.5s ease;
+      }
+      & [placeholder]:focus::-webkit-input-placeholder {
+        color: transparent;
+        transition: color 0.5s ease;
+      }
+      & button {
+        @include button($button-color-2, clamp(3.5rem, 30%, 7rem), 2.3rem);
+        font-size: clamp(0.6rem, 3vw, 0.9rem);
+      }
+    }
+  }
 }
 
 // ***FOOTER ***//
 
 .footer {
-	height: max-content;
-	padding: 3rem 0.5rem;
-	@include univerzalni-display(flex, center, center);
-	background-color: $primary-background-color;
+  height: max-content;
+  padding: 3rem 0.5rem;
+  @include univerzalni-display(flex, center, center);
+  background-color: $primary-background-color;
 
-	&-container {
-		width: 100%;
-		@include univerzalni-display(flex, space-evenly, center);
+  &-container {
+    width: 100%;
+    @include univerzalni-display(flex, space-evenly, center);
 
-		& .bookie-footer {
-			@include univerzalni-display(flex, space-evenly, flex-start);
-			flex-direction: column;
+    & .bookie-footer {
+      @include univerzalni-display(flex, space-evenly, flex-start);
+      flex-direction: column;
 
-			& h1 {
-				font-size: clamp(1.7rem, 3vw, 2.5rem);
-				cursor: pointer;
-				transition: transform 0.2s ease;
-			}
+      & h1 {
+        font-size: clamp(1.7rem, 3vw, 2.5rem);
+        cursor: pointer;
+        transition: transform 0.2s ease;
+      }
 
-			& h1:active {
-				transform: scale(0.925);
-				transition: transform 0.2s ease;
-			}
-			& h2 {
-				font-size: clamp(1.2rem, 3vw, 1.5rem);
-			}
-		}
+      & h1:active {
+        transform: scale(0.925);
+        transition: transform 0.2s ease;
+      }
+      & h2 {
+        font-size: clamp(1.2rem, 3vw, 1.5rem);
+      }
+    }
 
-		& .contact-footer {
-			@include univerzalni-display(flex, center, center);
-			flex-direction: column;
+    & .contact-footer {
+      @include univerzalni-display(flex, center, center);
+      flex-direction: column;
 
-			& h1 {
-				font-size: clamp(1.7rem, 3vw, 2.5rem);
-				margin-bottom: 3rem;
-			}
+      & h1 {
+        font-size: clamp(1.7rem, 3vw, 2.5rem);
+        margin-bottom: 3rem;
+      }
 
-			& form {
-				@include univerzalni-display(flex, center, center);
-				flex-direction: column;
-				width: clamp(200px, 20vw, 400px);
+      & form {
+        @include univerzalni-display(flex, center, center);
+        flex-direction: column;
+        width: clamp(200px, 20vw, 400px);
 
-				& input,
-				& textarea {
-					width: 90%;
-					margin: 0 auto;
-					margin-bottom: 2rem;
-					background: none;
-					outline: none;
-					border: none;
-					border-bottom: 1px solid $primary-text-color;
-					line-height: 30px;
-				}
+        & input,
+        & textarea {
+          width: 90%;
+          margin: 0 auto;
+          margin-bottom: 2rem;
+          background: none;
+          outline: none;
+          border: none;
+          border-bottom: 1px solid $primary-text-color;
+          line-height: 30px;
+        }
 
-				& textarea {
-					height: 10rem;
-				}
+        & textarea {
+          height: 10rem;
+        }
 
-				& [placeholder]::-webkit-input-placeholder {
-					transition: color 0.5s ease;
-				}
-				& [placeholder]:focus::-webkit-input-placeholder {
-					color: transparent;
-					transition: color 0.5s ease;
-				}
+        & [placeholder]::-webkit-input-placeholder {
+          transition: color 0.5s ease;
+        }
+        & [placeholder]:focus::-webkit-input-placeholder {
+          color: transparent;
+          transition: color 0.5s ease;
+        }
 
-				& button {
-					@include button($button-color-1, 35%, 2.2rem);
-					margin: 0 auto;
-					font-size: clamp(0.8rem, 1vw, 1rem);
-					transition: transform 0.3s ease;
-				}
+        & button {
+          @include button($button-color-1, 35%, 2.2rem);
+          margin: 0 auto;
+          font-size: clamp(0.8rem, 1vw, 1rem);
+          transition: transform 0.3s ease;
+        }
 
-				& button:focus {
-					box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
-				}
-				& button:hover {
-					box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
-					transform: translate3d(0, 1px, 0);
-					transition: transform 0.3s ease;
-				}
-				& button:active {
-					transform: scale(0.9);
-				}
-			}
-		}
-	}
-	& .made-by-footer {
-		width: 30%;
-		@include univerzalni-display(flex, flex-start, center);
-		flex-direction: column;
+        & button:focus {
+          box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+        }
+        & button:hover {
+          box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
+          transform: translate3d(0, 1px, 0);
+          transition: transform 0.3s ease;
+        }
+        & button:active {
+          transform: scale(0.9);
+        }
+      }
+    }
+  }
+  & .made-by-footer {
+    width: 30%;
+    @include univerzalni-display(flex, flex-start, center);
+    flex-direction: column;
 
-		& h1 {
-			font-size: clamp(1.5rem, 2.5vw, 2.1rem);
-			margin-bottom: 2rem;
-			text-align: center;
-		}
+    & h1 {
+      font-size: clamp(1.5rem, 2.5vw, 2.1rem);
+      margin-bottom: 2rem;
+      text-align: center;
+    }
 
-		& .social-icons-footer {
-			width: 100%;
-			@include univerzalni-display(flex, space-evenly, center);
+    & .social-icons-footer {
+      width: 100%;
+      @include univerzalni-display(flex, space-evenly, center);
 
-			& a {
-				text-decoration: none;
-				font-size: clamp(1.2rem, 2vw, 1.5rem);
-				transition: transform 0.3s ease;
-			}
+      & a {
+        text-decoration: none;
+        font-size: clamp(1.2rem, 2vw, 1.5rem);
+        transition: transform 0.3s ease;
+      }
 
-			& a:active {
-				transform: scale(0.875);
-				transition: transform 0.2s ease;
-			}
-		}
-	}
+      & a:active {
+        transform: scale(0.875);
+        transition: transform 0.2s ease;
+      }
+    }
+  }
 }
