--- a/styles/sass/_login.scss
+++ b/styles/sass/_login.scss
@@ -11,7 +11,7 @@
 		padding-bottom: 6rem;
 
 		& h1 {
-			font-size: clamp(1.8rem, 8vw, 4.5rem);
+			font-size: clamp(0.8rem, 8vw, 4.5rem);
 			margin-bottom: 2.5rem;
 		}
 
@@ -24,7 +24,7 @@
 			& .password-container {
 				width: clamp(200px, 70%, 450px);
 				@include univerzalni-display(flex, center, center);
-				margin-bottom: 4rem;
+				margin-bottom: 2rem;
 
 				& input {
 					width: 100%;
@@ -47,6 +47,16 @@
 					color: transparent;
 					transition: color 0.5s ease;
 				}
+			}
+
+			& p {
+				@include error-message(clamp(0.7rem, 1.5vw, 1.1rem));
+				margin-bottom: 3rem;
+			}
+
+			& h4 {
+				@include succes-message(clamp(0.7rem, 1.5vw, 1.1rem));
+				margin: 1.5rem 0;
 			}
 			& button {
 				@include button($button-color-2, clamp(4rem, 40%, 7.5rem), 2.4rem);
