--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -428,7 +428,7 @@ nav {
 				& textarea {
 					width: 90%;
 					margin: 0 auto;
-					margin-bottom: 2rem;
+					margin-bottom: 1rem;
 					background: none;
 					outline: none;
 					border: none;
@@ -452,19 +452,14 @@ nav {
 					@include button($button-color-1, 35%, 2.2rem);
 					margin: 0 auto;
 					font-size: clamp(0.8rem, 1vw, 1rem);
-					transition: transform 0.3s ease;
 				}
-
-				& button:focus {
-					box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
+				& p {
+					@include error-message(clamp(0.7rem, 1.5vw, 1.1rem));
+					margin-bottom: 2rem;
 				}
-				& button:hover {
-					box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
-					transform: translate3d(0, 1px, 0);
-					transition: transform 0.3s ease;
-				}
-				& button:active {
-					transform: scale(0.9);
+				& h4 {
+					@include succes-message(clamp(0.7rem, 1.5vw, 1.1rem));
+					margin-top: 2rem;
 				}
 			}
 		}
@@ -478,6 +473,10 @@ nav {
 			font-size: clamp(1.5rem, 2.5vw, 2.1rem);
 			margin-bottom: 2rem;
 			text-align: center;
+
+			& span {
+				font-size: clamp(1.1rem, 2vw, 1.6rem);
+			}
 		}
 
 		& .social-icons-footer {
