--- a/styles/sass/_responzive.scss
+++ b/styles/sass/_responzive.scss
@@ -33,14 +33,12 @@
 	}
 }
 @include media-mobile {
-	.newsletter-container {
-		& .sign-in {
+	.newsletter-container .sign-in-form {
+		& .form-container {
 			flex-direction: column;
-			width: 75%;
 
 			& input {
-				width: 80%;
-				margin: 0 auto;
+				margin-right: 0;
 				margin-bottom: 2rem;
 			}
 		}
