--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -944,7 +944,7 @@ nav {
   height: -moz-max-content;
   height: max-content;
   width: 70%;
-  margin: 3rem auto;
+  margin: 5rem auto;
   padding: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -962,7 +962,7 @@ nav {
 }
 
 .about .introduction h1 {
-  font-size: clamp(1.8rem, 7vw, 5.5rem);
+  font-size: clamp(2rem, 7vw, 5.5rem);
   margin-bottom: 3rem;
   text-align: center;
 }
@@ -977,21 +977,21 @@ nav {
   height: -moz-max-content;
   height: max-content;
   width: 100%;
-  margin: 10rem 0;
+  margin: 5rem 0;
   padding: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
 .about .vision .picture-container {
-  width: 60%;
+  padding: 0 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1003,15 +1003,9 @@ nav {
           align-items: center;
 }
 
-.about .vision .picture-container div {
-  background-color: aqua;
-  height: 100px;
-  width: 100px;
-}
-
 .about .vision .text-container {
   width: 40%;
-  padding: 1rem 3rem;
+  padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1028,12 +1022,13 @@ nav {
 }
 
 .about .vision .text-container h1 {
-  font-size: clamp(1.8rem, 6vw, 4.5rem);
-  margin-bottom: 3rem;
+  font-size: clamp(1.5rem, 6vw, 4.5rem);
+  margin-bottom: 2rem;
+  text-align: center;
 }
 
 .about .vision .text-container p {
-  font-size: clamp(0.9rem, 3vw, 1.3rem);
+  font-size: clamp(0.85rem, 2vw, 1.3rem);
   text-align: center;
   margin-bottom: 4rem;
 }
@@ -1723,6 +1718,9 @@ nav {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .about .vision h1 {
+    margin-top: 2rem;
   }
   .about .vision .text-container {
     width: 90%;
