--- a/styles/sass/_about-us.scss
+++ b/styles/sass/_about-us.scss
@@ -10,12 +10,12 @@
 	& .introduction {
 		height: max-content;
 		width: 70%;
-		margin: 3rem auto;
+		margin: 5rem auto;
 		padding: 2rem;
 		@include univerzalni-display(flex, center, center);
 		flex-direction: column;
 		& h1 {
-			font-size: clamp(1.8rem, 7vw, 5.5rem);
+			font-size: clamp(2rem, 7vw, 5.5rem);
 			margin-bottom: 3rem;
 			text-align: center;
 		}
@@ -28,32 +28,27 @@
 	.vision {
 		height: max-content;
 		width: 100%;
-		margin: 10rem 0;
+		margin: 5rem 0;
 		padding: 2rem;
-		@include univerzalni-display(flex, center, center);
+		@include univerzalni-display(flex, space-evenly, center);
 		& .picture-container {
-			width: 60%;
+			padding: 0 2rem;
 			@include univerzalni-display(flex, center, center);
-
-			& div {
-				background-color: aqua;
-				height: 100px;
-				width: 100px;
-			}
 		}
 		& .text-container {
 			width: 40%;
-			padding: 1rem 3rem;
+			padding: 1rem;
 			@include univerzalni-display(flex, space-evenly, center);
 			flex-direction: column;
 
 			& h1 {
-				font-size: clamp(1.8rem, 6vw, 4.5rem);
-				margin-bottom: 3rem;
+				font-size: clamp(1.5rem, 6vw, 4.5rem);
+				margin-bottom: 2rem;
+				text-align: center;
 			}
 
 			& p {
-				font-size: clamp(0.9rem, 3vw, 1.3rem);
+				font-size: clamp(0.85rem, 2vw, 1.3rem);
 				text-align: center;
 				margin-bottom: 4rem;
 			}
